--- a/styles/arctrcts.css
+++ b/styles/arctrcts.css
@@ -7,3 +7,99 @@
   font-weight: 400;
   font-style: normal;
 }
+.display-flex{
+    display: flex;
+}
+.test-gray{
+color: #424242;
+}
+.test-lightgray{
+  color:   #727272;
+
+}
+.bg-light{
+  background-color:  rgba(253, 225, 184, 1);
+
+}
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+     
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+
+}
+main > section{
+    margin-top: 130px;
+
+}
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+
+}
+.nav-item{
+    list-style: none;
+    margin: 30px;
+   
+}
+.nav-link{
+    text-decoration: none;
+    font-weight:500px  ;
+}
+.navbar , .banner{
+    max-width:1440px ;
+    margin: 0 auto;
+   
+
+}
+.band{
+    font-weight: 700px;
+    font-size: 3rem;
+}
+.banner-content{
+    font-weight: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+.banner-img{
+    width: 100%;
+}
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+ grid-template-columns:repeat(2 ,1fr) ;
+ gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px ;
+     
+}
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+#quick-list{
+    font-weight: 500;
+}
+
+@media screen and(max-width:576px){
+    .navbar, .nav-link{
+        flex-direction: column;
+    }
+}
