--- a/styles/arctrcts.css
+++ b/styles/arctrcts.css
@@ -21,6 +21,9 @@ color: #424242;
   background-color:  rgba(253, 225, 184, 1);
 
 }
+    .test-primary{
+        color: #FF900E;
+    }
 .btn-primary{
     background-color: #FF900E;
     color: white;
@@ -90,16 +93,65 @@ main > section{
     max-width: 530px ;
      
 }
-.feature-title{
+.section-title{
     font-size: 2.8rem;
     font-weight: 700;
 }
 #quick-list{
     font-weight: 500;
 }
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px ;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+     
+
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+
+
+}
+.fact-drescription{
+    max-width: 540px;
+
+}
 
 @media screen and(max-width:576px){
-    .navbar, .nav-link{
+    .navbar, .nav-link, .teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+
+        margin-left: 20px;
+    }
+}
+
+
+@media screen and(min-width:576px) and(max-width:992px){
+    .teams{
+        flex-direction: column;
+    }
+    .our-feature{
+        margin-left: 50px auto;
     }
 }
