--- a/styles/arctrcts.css
+++ b/styles/arctrcts.css
@@ -132,17 +132,41 @@ main > section{
     max-width: 540px;
 
 }
+.sponsor-info{
+    max-width: 54opx;
+    margin:50px auto ;
+    text-align: center;
+}
+.sponsor-company{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.sponsor-company img{
+    filter: grayscale(100%);
+}
 
 @media screen and(max-width:576px){
     .navbar, .nav-link, .teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container,.fact-container,.sponsor-company{
         grid-template-columns: repeat(1,1fr);
     }
     .our-features{
 
         margin-left: 20px;
+    }
+    .fact-container, .sponsor-company{
+        justify-items : center;
+        gap: 24px;
+    }
+    .sponsor-company{
+        justify-items: center;
+        gap: 50px;
+    }
+    .sponsor-company, .fact-container{
+        grid-template-columns: repeat(2.1fr);
+        gap: 50px;
     }
 }
 
