--- a/styles/arctrcts.css
+++ b/styles/arctrcts.css
@@ -100,6 +100,40 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left:5px solid #FF900E;
+    padding-left: 20px ;
+
+}
+.feature-card{
+    padding: 30px;
+    border-radius:8px ;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight:700 ;
+}
+
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  
+}
 .fact-container{
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -167,6 +201,7 @@ main > section{
     .sponsor-company, .fact-container{
         grid-template-columns: repeat(2.1fr);
         gap: 50px;
+        justify-items: center;
     }
 }
 
